--- a/load_db.ipynb
+++ b/load_db.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,11 +132,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\n",
+      "    \"TxnId\": 23037,\n",
+      "    \"Label\": \"load_product_recommendation_data_final1\",\n",
+      "    \"Status\": \"Success\",\n",
+      "    \"Message\": \"OK\",\n",
+      "    \"NumberTotalRows\": 13647310,\n",
+      "    \"NumberLoadedRows\": 12772153,\n",
+      "    \"NumberFilteredRows\": 875157,\n",
+      "    \"NumberUnselectedRows\": 0,\n",
+      "    \"LoadBytes\": 2292759599,\n",
+      "    \"LoadTimeMs\": 73159,\n",
+      "    \"BeginTxnTimeMs\": 2,\n",
+      "    \"StreamLoadPlanTimeMs\": 84,\n",
+      "    \"ReadDataTimeMs\": 64865,\n",
+      "    \"WriteDataTimeMs\": 73010,\n",
+      "    \"CommitAndPublishTimeMs\": 61,\n",
+      "    \"ErrorURL\": \"http://127.0.0.1:8040/api/_load_error_log?file=error_log_364d8c2a89f27f8a_8dbb19e50e7c4299\"\n",
+      "}"
+     ]
+    }
+   ],
    "source": [
     "!./stream_load_starrocks.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query executed successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "sql_query = \"SELECT * FROM product_recommendation.data LIMIT 200\"\n",
+    "engine = create_engine('starrocks://root:@localhost:9030/product_recommendation')\n",
+    "\n",
+    "try:\n",
+    "    engine, rows = sql_execute(engine, sql_query)\n",
+    "    print(\"Query executed successfully!\")\n",
+    "    df = pd.DataFrame(rows)\n",
+    "    df.to_csv(\"sample.csv\")\n",
+    "except SQLAlchemyError:\n",
+    "    print(\"The calling function is handling the database error.\")\n",
+    "except Exception:\n",
+    "    print(\"The calling function is handling unexpected error\")"
    ]
   }
  ],
