--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "c4d327cf-4323-48c1-8583-184b3fcb93b4",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "dbe265f6-bab5-4c95-9d0d-042def8a922b",
    "metadata": {},
    "outputs": [
@@ -40,13 +40,13 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/02/16 15:16:35 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "25/02/18 06:16:12 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
    "source": [
     "conf = SparkConf() \\\n",
-    "    .setAppName(\"CONCAC\") \\\n",
+    "    .setAppName(\"data_cleaning\") \\\n",
     "    .set(\"spark.driver.memory\", \"12g\")\\\n",
     "    .set(\"spark.executor.cores\",\"8\") \\\n",
     "    .set(\"spark.sql.execution.arrow.pyspark.enabled\",\"true\")\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d0508394-cbf9-4a48-b975-50dde502144b",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                "
+      "                                                                                \r"
      ]
     },
     {
@@ -72,20 +72,20 @@
        "DataFrame[fecha_dato: date, ncodpers: double, ind_empleado: string, pais_residencia: string, sexo: string, age: string, fecha_alta: date, ind_nuevo: string, antiguedad: string, indrel: string, ult_fec_cli_1t: date, indrel_1mes: string, tiprel_1mes: string, indresi: string, indext: string, conyuemp: string, canal_entrada: string, indfall: string, tipodom: string, cod_prov: string, nomprov: string, ind_actividad_cliente: string, renta: double, segmento: string, ind_ahor_fin_ult1: int, ind_aval_fin_ult1: int, ind_cco_fin_ult1: int, ind_cder_fin_ult1: int, ind_cno_fin_ult1: int, ind_ctju_fin_ult1: int, ind_ctma_fin_ult1: int, ind_ctop_fin_ult1: int, ind_ctpp_fin_ult1: int, ind_deco_fin_ult1: int, ind_deme_fin_ult1: int, ind_dela_fin_ult1: int, ind_ecue_fin_ult1: int, ind_fond_fin_ult1: int, ind_hip_fin_ult1: int, ind_plan_fin_ult1: int, ind_pres_fin_ult1: int, ind_reca_fin_ult1: int, ind_tjcr_fin_ult1: int, ind_valo_fin_ult1: int, ind_viv_fin_ult1: int, ind_nomina_ult1: string, ind_nom_pens_ult1: string, ind_recibo_ult1: int]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "csv_file_path =\"data.csv\"\n",
+    "csv_file_path =\"/workspace/data.csv\"\n",
     "df = spark.read.csv(csv_file_path, header=True, inferSchema=True)\n",
     "df.orderBy(asc(\"fecha_dato\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0beb8b49-ecd7-4b20-a49b-4d70d7d384b0",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,6 @@
     "mean_age_30_to_100 = df.filter((F.col(\"age\") >= 30) & (F.col(\"age\") <= 100)).select(F.mean(\"age\")).collect()[0][0]\n",
     "overall_mean_age = df.select(F.mean(\"age\")).collect()[0][0]\n",
     "\n",
-    "# Step 4: Apply transformations using `when` and `otherwise`\n",
     "df = df.withColumn(\n",
     "    \"age\",\n",
     "    F.when(F.col(\"age\") < 18, mean_age_18_to_30)\n",
