update model file and add markdown for code

--- a/data_cleaning_and_feature_engineering.ipynb
+++ b/data_cleaning_and_feature_engineering.ipynb
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "530c8b33-f888-46f2-86f6-22696b4be4c8",
    "metadata": {},
    "outputs": [],
@@ -390,7 +390,7 @@
     "    spark_df = spark_df.withColumn(\"indext\", indext_udf(col(\"indext\")).cast(IntegerType()))\n",
     "    spark_df = spark_df.withColumn(\"conyuemp\", conyuemp_udf(col(\"conyuemp\")).cast(IntegerType()))\n",
     "    spark_df = spark_df.withColumn(\"segmento\", segmento_udf(col(\"segmento\")).cast(IntegerType()))\n",
-    "    spark_df = spark_df.withColumn(\"ind_empleado\", segmento_udf(col(\"ind_empleado\")).cast(IntegerType()))\n",
+    "    spark_df = spark_df.withColumn(\"ind_empleado\", emp_udf(col(\"ind_empleado\")).cast(IntegerType()))\n",
     "    \n",
     "    return spark_df\n",
     "\n",
@@ -582,7 +582,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0949e8ce",
    "metadata": {},
    "source": [
     "# Xuất dữ liệu đã làm sạch sang file Parquet trong PySpark\n",
