update model file and add markdown for code

--- a/model.ipynb
+++ b/model.ipynb
@@ -510,9 +510,17 @@
    "source": [
     "# -------------------------------------------------------------\n",
     "# 11. Define MAP@7 metric function\n",
-    "import numpy as np\n",
     "\n",
-    "def apk(actual, predicted, k=7, default=0.0): # k is set to 7 for MAP@7\n",
+    "def apk(actual, predicted, k=7, default=0.0):\n",
+    "    \"\"\"\n",
+    "    Calculate the average precision at k (AP@k) for a single instance.\n",
+    "    \n",
+    "    :param actual: List of actual products.\n",
+    "    :param predicted: List of predicted products.\n",
+    "    :param k: The number of predictions to consider.\n",
+    "    :param default: The default value to return if there are no actual products.\n",
+    "    :return: The average precision at k.\n",
+    "    \"\"\"\n",
     "    if len(predicted) > k:\n",
     "        predicted = predicted[:k]\n",
     "    score = 0.0\n",
@@ -525,31 +533,17 @@
     "        return default\n",
     "    return score / min(len(actual), k)\n",
     "\n",
-    "def mapk(actual, predicted, k=7, default=0.0): # k is set to 7 for MAP@7\n",
-    "    return np.mean([apk(a, p, k, default) for a, p in zip(actual, predicted)])\n",
-    "\n",
-    "# -------------------------------------------------------------\n",
-    "# 12. Create submission and calculate MAP@7\n",
-    "\n",
-    "submission_io_buffer = io.BytesIO()\n",
-    "make_submission_file(submission_io_buffer, preds, customer_ids, products)\n",
-    "\n",
-    "# For demonstration, calculate MAP@7 on the submission itself (replace with actual validation if available)\n",
-    "predicted_products_list_for_map7 = []\n",
-    "submission_io_buffer.seek(0)\n",
-    "next(submission_io_buffer) # Skip header\n",
-    "for line in submission_io_buffer:\n",
-    "    line = line.decode('utf-8').strip()\n",
-    "    predicted_products_str = line.split(',')[1]\n",
-    "    predicted_products = predicted_products_str.split()\n",
-    "    predicted_products_list_for_map7.append(predicted_products)\n",
-    "\n",
-    "# Dummy \"actual\" values for MAP@7 calculation (replace with your actual validation targets if you have them)\n",
-    "# In this example, we are just calculating MAP@7 of the submission against itself as a demo.\n",
-    "actual_products_list_for_map7 = predicted_products_list_for_map7 # Replace with real actual values if available\n",
-    "\n",
-    "map7_score = mapk(actual_products_list_for_map7, predicted_products_list_for_map7, k=7, default=0.0)\n",
-    "print(f\"MAP@7 on submission (demonstration): {map7_score:.4f}\")"
+    "def mapk(actual, predicted, k=7, default=0.0):\n",
+    "    \"\"\"\n",
+    "    Calculate the mean average precision at k (MAP@k) for a set of instances.\n",
+    "    \n",
+    "    :param actual: List of lists of actual products.\n",
+    "    :param predicted: List of lists of predicted products.\n",
+    "    :param k: The number of predictions to consider.\n",
+    "    :param default: The default value to return if there are no actual products.\n",
+    "    :return: The mean average precision at k.\n",
+    "    \"\"\"\n",
+    "    return np.mean([apk(a, p, k, default) for a, p in zip(actual, predicted)])"
    ]
   },
   {
