--- a/data_cleaning_and_feature_engineering.ipynb
+++ b/data_cleaning_and_feature_engineering.ipynb
@@ -32,7 +32,7 @@
      "text": [
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "25/02/23 14:46:23 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "25/02/24 10:55:45 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "                                                                                \r"
      ]
     },
@@ -99,15 +99,7 @@
    "execution_count": 3,
    "id": "0beb8b49-ecd7-4b20-a49b-4d70d7d384b0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Fill NA with overall mean\n",
     "mean_age_18_to_30 = df.filter((F.col(\"age\") >= 18) & (F.col(\"age\") <= 30)).select(F.mean(\"age\")).collect()[0][0]\n",
@@ -122,12 +114,7 @@
     ")\n",
     "\n",
     "df = df.fillna({\"age\": overall_mean_age})\n",
-    "df = df.withColumn(\"age\", F.col(\"age\").cast(\"int\"))\n",
-    "\n",
-    "# df = df.withColumn(\n",
-    "#     \"age\",\n",
-    "#     F.when(F.col(\"age\").isNull(), overall_mean_age).otherwise(F.col(\"age\"))\n",
-    "# )"
+    "df = df.withColumn(\"age\", F.col(\"age\").cast(\"int\"))"
    ]
   },
   {
@@ -142,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3b1492a6-7533-4887-8575-f85a76055047",
    "metadata": {},
    "outputs": [],
@@ -169,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "cdff52d8-9af3-4f27-b014-eaffef0c9ae1",
    "metadata": {},
    "outputs": [],
@@ -224,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2ba62a41-f4d6-4023-9f5d-058c56ef60f3",
    "metadata": {},
    "outputs": [
@@ -232,11 +219,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "25/02/23 14:52:31 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
-      "25/02/23 14:52:31 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
-      "25/02/23 14:52:31 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
-      "25/02/23 14:52:43 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
-      "25/02/23 14:52:43 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "25/02/24 10:56:35 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "25/02/24 10:56:35 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "25/02/24 10:56:35 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "25/02/24 10:56:43 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
+      "25/02/24 10:56:43 WARN WindowExec: No Partition Defined for Window operation! Moving all data to a single partition, this can cause serious performance degradation.\n",
       "                                                                                \r"
      ]
     }
@@ -254,13 +241,13 @@
     "df = df.withColumn(\n",
     "    \"fecha_alta\",\n",
     "    F.when(F.col(\"fecha_alta\").isNull(), median_value).otherwise(F.col(\"fecha_alta\"))\n",
+    ")\n",
     "\n",
     "median_value = df.select(F.median(\"ind_actividad_cliente\")).collect()[0][0]\n",
     "\n",
     "df = df.withColumn(\n",
     "    \"ind_actividad_cliente\",\n",
     "    F.when(F.col(\"ind_actividad_cliente\").isNull(), median_value).otherwise(F.col(\"ind_actividad_cliente\"))\n",
-    ")\n",
     ")\n",
     "\n",
     "#Fill with median of province\n",
@@ -286,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "081203e9-3f00-408c-a3a6-76e05dc42476",
    "metadata": {},
    "outputs": [],
@@ -309,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "530c8b33-f888-46f2-86f6-22696b4be4c8",
    "metadata": {},
    "outputs": [],
@@ -414,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "108bc651-962a-4763-ab69-0108d396aa8d",
    "metadata": {},
    "outputs": [],
@@ -467,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "863ad9cf-7183-4da3-993a-1157cdc5aa43",
    "metadata": {},
    "outputs": [],
@@ -485,18 +472,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fac2acb9-5651-4619-a18e-86363418fe3f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Count the number of NULLs value in dataframe\n",
-    "# Dict_Null = {col:spark_df.filter(spark_df[col].isNull()).count() for col in spark_df.columns}\n",
-    "# Dict_Null"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "feda380c",
    "metadata": {},
@@ -508,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "55865aa5",
    "metadata": {},
    "outputs": [],
@@ -544,7 +519,8 @@
     "lag_months =[1,2,3,4,5,6]\n",
     "for lag in lag_months:\n",
     "    for col in target_cols:\n",
-    "        spark_df = spark_df.withColumn(f\"lag_{lag}_{col}\", F.lag(F.col(col),lag).over(w))"
+    "        spark_df = spark_df.withColumn(f\"lag_{lag}_{col}\", F.lag(F.col(col),lag).over(w))\n",
+    "        spark_df = spark_df.fillna({f\"lag_{lag}_{col}\" : \"0\"})"
    ]
   },
   {
@@ -552,14 +528,40 @@
    "id": "3ae787e8",
    "metadata": {},
    "source": [
-    "# Tạo độ trễ (Lag Features) trong PySpark\n",
+    "## Phát Hiện Khoảng Trống Thời Gian (Gap) Trong Dữ Liệu Khách Hàng\n",
     "\n",
-    "Đoạn mã PySpark này tạo các *đặc trưng trễ* (lag features) cho một tập hợp các cột trong DataFrame (`spark_df`).  Đặc trưng trễ là các giá trị của một cột ở các thời điểm *trước đó*.  Chúng thường rất hữu ích trong các bài toán dự đoán chuỗi thời gian (time series forecasting), nơi mà giá trị trong quá khứ có thể giúp dự đoán giá trị trong tương lai."
+    "Đoạn mã này sử dụng Spark để xác định các khoảng trống (gap) trong chuỗi thời gian dữ liệu của mỗi khách hàng. Nó tìm kiếm các trường hợp mà dữ liệu của khách hàng không liên tục theo tháng.\n",
+    "\n",
+    "**Các Bước:**\n",
+    "\n",
+    "1.  **Định nghĩa Window:**\n",
+    "    *   `w = Window.partitionBy(\"ncodpers\").orderBy(\"month_int\")`: Tạo một window có tên `w`, được phân vùng theo mã khách hàng (`ncodpers`) và sắp xếp theo tháng (`month_int`). Điều này cho phép thực hiện các phép toán trên dữ liệu của mỗi khách hàng một cách độc lập và theo thứ tự thời gian.\n",
+    "\n",
+    "2.  **Tính Tháng Trước và Độ Lệch Tháng:**\n",
+    "    *   `spark_df = spark_df.withColumn(\"prev_month\", F.lag(\"month_int\").over(w))`: Tạo một cột mới có tên `prev_month` chứa giá trị của cột `month_int` trong tháng trước đó cho mỗi khách hàng. Sử dụng hàm `F.lag()` và window `w` để lấy giá trị từ hàng trước đó trong cùng một phân vùng (khách hàng).\n",
+    "    *   `spark_df = spark_df.withColumn(\"month_diff\", ...)`: Tạo một cột mới có tên `month_diff` chứa độ lệch (difference) giữa tháng hiện tại và tháng trước đó. Sử dụng hàm `F.when()` để xử lý trường hợp khi `prev_month` là NULL (khách hàng xuất hiện lần đầu tiên). Trong trường hợp này, độ lệch được đặt là 0.\n",
+    "\n",
+    "3.  **Gắn Cờ Khoảng Trống (Gap):**\n",
+    "    *   `spark_df = spark_df.withColumn(\"gap_flag\", ...)`: Tạo một cột mới có tên `gap_flag` để gắn cờ các khoảng trống trong chuỗi thời gian. Một hàng được gắn cờ là có khoảng trống nếu độ lệch tháng (`month_diff`) không bằng 1 **và** tháng trước đó (`prev_month`) không phải là NULL. Điều kiện `F.col(\"prev_month\").isNotNull()` đảm bảo rằng chỉ các hàng không phải là hàng đầu tiên cho mỗi khách hàng mới được kiểm tra. Giá trị của `gap_flag` là 1 nếu có khoảng trống và 0 nếu không.\n",
+    "\n",
+    "4.  **Xóa Cột Trung Gian:**\n",
+    "    *   `spark_df = spark_df.drop(\"prev_month\")`: Xóa cột `prev_month` vì nó không còn cần thiết sau khi tính toán `gap_flag`.\n",
+    "\n",
+    "**Kết Quả:**\n",
+    "\n",
+    "Kết quả là DataFrame `spark_df` có thêm cột `gap_flag`. Giá trị 1 trong cột này chỉ ra rằng có một khoảng trống trong chuỗi thời gian dữ liệu của khách hàng tại hàng đó.\n",
+    "\n",
+    "**Chú Thích Thuật Ngữ:**\n",
+    "\n",
+    "*   **Window:** Một cách để chia dữ liệu thành các nhóm (trong trường hợp này là theo khách hàng) và thực hiện các phép toán trên mỗi nhóm một cách độc lập.\n",
+    "*   **Lag:** Lấy giá trị của một cột từ một hàng trước đó trong cùng một phân vùng (window).\n",
+    "*   **Gap:** Khoảng trống, sự gián đoạn trong chuỗi thời gian. Trong trường hợp này, là sự thiếu dữ liệu cho một hoặc nhiều tháng liên tiếp.\n",
+    "*   **Flag:** Cờ, một biến nhị phân (0 hoặc 1) được sử dụng để đánh dấu một điều kiện hoặc sự kiện."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a1f0c577",
    "metadata": {},
    "outputs": [],
@@ -577,7 +579,9 @@
     "# Flag a gap if the difference is not equal to 1 (and ignore the first record)\n",
     "spark_df = spark_df.withColumn(\"gap_flag\", \n",
     "                   F.when((F.col(\"month_diff\") != 1) & F.col(\"prev_month\").isNotNull(), 1)\n",
-    "                    .otherwise(0))"
+    "                    .otherwise(0))\n",
+    "\n",
+    "spark_df = spark_df.drop(\"prev_month\")"
    ]
   },
   {
@@ -591,14 +595,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "19916e85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "25/02/24 10:57:31 WARN SparkStringUtils: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "#Export cleaned data to .parquet file to train train the model\n",
     "# spark_df.printSchema()\n",
-    "spark_df.write.mode(\"overwrite\").parquet(\"train_test.parquet\")"
+    "spark_df.repartition(100).write.mode(\"overwrite\").parquet(\"train_test.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f67d220",
+   "metadata": {},
+   "source": [
+    "## Đếm Số Giá Trị NULL trong DataFrame\n",
+    "\n",
+    "Đoạn mã này sử dụng PySpark để đếm số lượng giá trị NULL trong mỗi cột của DataFrame `spark_df`.\n",
+    "\n",
+    "**Các Bước:**\n",
+    "\n",
+    "1.  **Tạo Dictionary Comprehension:** Sử dụng dictionary comprehension để tạo một dictionary có tên `Dict_Null`.\n",
+    "2.  **Lặp qua các cột:** Với mỗi cột `col` trong `spark_df.columns`:\n",
+    "    *   **Lọc DataFrame:** Sử dụng hàm `spark_df.filter(spark_df[col].isNull())` để tạo một DataFrame mới chỉ chứa các hàng mà giá trị trong cột `col` là NULL.\n",
+    "    *   **Đếm số hàng:** Sử dụng hàm `count()` để đếm số hàng trong DataFrame đã lọc. Điều này tương đương với việc đếm số giá trị NULL trong cột `col`.\n",
+    "    *   **Gán giá trị vào Dictionary:** Gán tên cột `col` làm khóa và số lượng giá trị NULL làm giá trị trong dictionary `Dict_Null`.\n",
+    "3.  **In Dictionary:** In ra dictionary `Dict_Null`.\n",
+    "\n",
+    "**Kết Quả:**\n",
+    "\n",
+    "Kết quả là một dictionary, trong đó mỗi khóa là tên của một cột trong DataFrame và mỗi giá trị là số lượng giá trị NULL trong cột đó.\n",
+    "\n",
+    "**Chú Thích Thuật Ngữ:**\n",
+    "\n",
+    "*   **DataFrame:** Một cấu trúc dữ liệu dạng bảng trong Spark (tương tự như bảng trong cơ sở dữ liệu hoặc DataFrame trong Pandas).\n",
+    "*   **NULL:** Một giá trị đặc biệt biểu thị sự thiếu thông tin hoặc không xác định.\n",
+    "*   **Dictionary:** Một cấu trúc dữ liệu trong Python cho phép lưu trữ các cặp khóa-giá trị. Mỗi khóa là duy nhất và được sử dụng để truy cập giá trị tương ứng.\n",
+    "*   **Dictionary Comprehension:** Một cách ngắn gọn để tạo một dictionary mới trong Python.\n",
+    "*   **Filter:** Lọc, chọn các hàng thỏa mãn một điều kiện nhất định.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "27035b65",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.stop()"
    ]
   }
  ],
