update model file and add markdown for code

--- a/data_cleaning_and_feature_engineering.ipynb
+++ b/data_cleaning_and_feature_engineering.ipynb
@@ -610,7 +610,7 @@
    "source": [
     "#Export cleaned data to .parquet file to train train the model\n",
     "# spark_df.printSchema()\n",
-    "spark_df.repartition(100).write.mode(\"overwrite\").parquet(\"train_test.parquet\")"
+    "spark_df.write.mode(\"overwrite\").parquet(\"train_test.parquet\")"
    ]
   },
   {
