update model file and add markdown for code

--- a/data_ana.ipynb
+++ b/data_ana.ipynb
@@ -472,8 +472,7 @@
     "*   **Distinct:** Loại bỏ các bản ghi trùng lặp.\n",
     "*   **Pivot:** Chuyển đổi các giá trị duy nhất trong một cột thành các cột mới.\n",
     "*   **Aggregate (Agg):** Gom nhóm dữ liệu và thực hiện một phép toán.\n",
-    "*   **Literal (Lit):** Tạo một giá trị không đổi.\n",
-    "*   **Fill NA (fillna):** Điền các giá trị thiếu (NULL) bằng một giá trị cụ thể."
+    "*   **Literal (Lit):** Tạo một giá trị không đổi."
    ]
   },
   {
@@ -650,17 +649,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Phân Tích Phát Sinh Sản Phẩm Mới (Positive Flank)\n",
+    "## Phân Tích Phát Sinh Sản Phẩm Mới \n",
     "\n",
-    "Đoạn mã phân tích sự phát sinh (Positive Flank) của các sản phẩm mới (Target Products) trong dữ liệu khách hàng. Mục tiêu: Xác định thời điểm khách hàng bắt đầu sử dụng sản phẩm (từ 0 lên 1).\n",
+    "Đoạn mã phân tích sự phát sinh của các sản phẩm mới (Target Products) trong dữ liệu khách hàng. Mục tiêu: Xác định thời điểm khách hàng bắt đầu sử dụng sản phẩm (từ 0 lên 1).\n",
     "\n",
     "**Các Bước:**\n",
     "\n",
     "1.  Chuẩn Bị Dữ Liệu: Chuyển đổi ngày, tạo cột Lag cho sản phẩm và ngày.\n",
-    "2.  Xác Định Positive Flank: Tìm các sự kiện từ \"không dùng\" sang \"dùng\" sản phẩm trong < 32 ngày.\n",
+    "2.  Xác Định Sự Phát Sinh Sản Phẩm Mới: Tìm các sự kiện từ \"không dùng\" sang \"dùng\" sản phẩm trong 1 tháng.\n",
     "3.  Phân Tích & Trực Quan:\n",
     "    *   Biểu đồ 1 - 24: Tỷ lệ tương đối hàng tháng. Highlight tháng 5.\n",
-    "    *   Biểu đồ 25: Tổng số Positive Flank trong chu kì được xét.\n",
+    "    *   Biểu đồ 25: Tổng số Phát Sinh Sản Phẩm Mới trong chu kì được xét.\n",
     "    *   Biểu đồ 26: Tỷ lệ tháng 5 so với 3 tháng trước. (Tháng 5 tăng trưởng so với quá khứ)\n",
     "    *   Biểu đồ 27: Tần suất sản phẩm trong tháng 5. (Sản phẩm nào được dùng nhiều trong tháng 5)\n",
     "\n",
@@ -669,8 +668,6 @@
     "Phân tích các biểu đồ liên quan đến tháng 5 để dự đoán xu hướng sử dụng sản phẩm, từ đó đưa ra chiến lược để dự đoán cho năm sau.\n",
     "\n",
     "**Chú Thích Thuật Ngữ:**\n",
-    "\n",
-    "*   **Positive Flank:** Sự kiện khi một khách hàng chuyển từ không sử dụng sản phẩm sang sử dụng sản phẩm.\n",
     "*   **Target Products:** Các sản phẩm mục tiêu được phân tích.\n",
     "*   **Lag:** Giá trị trước đó của một biến (ví dụ: giá trị sản phẩm tháng trước).\n",
     "*   **Highlight:** Làm nổi bật, nhấn mạnh.\n"
