update model file and add markdown for code

--- a/data_cleaning_and_feature_engineering.ipynb
+++ b/data_cleaning_and_feature_engineering.ipynb
@@ -301,6 +301,7 @@
    "outputs": [],
    "source": [
     "#Map a string value to a integer value\n",
+    "#Chuyen quoc gia cu tru tu sring sang so\n",
     "canal_dict = {'KAI': 35,'KBG': 17,'KGU': 149,'KDE': 47,'KAJ': 41,'KCG': 59,\n",
     " 'KHM': 12,'KAL': 74,'KFH': 140,'KCT': 112,'KBJ': 133,'KBL': 88,'KHQ': 157,'KFB': 146,'KFV': 48,'KFC': 4,\n",
     " 'KCK': 52,'KAN': 110,'KES': 68,'KCB': 78,'KBS': 118,'KDP': 103,'KDD': 113,'KBX': 116,'KCM': 82,\n",
@@ -323,7 +324,7 @@
     " 'KEV': 87,'KHE': 1,'KHC': 9,'KFK': 20,'KDC': 75,'KFM': 141,'KHP': 160,'KHS': 162,\n",
     " 'KFI': 134,'KGV': 43}\n",
     "\n",
-    "\n",
+    "#Chuyen kenh khach hang dung de gia nhap tu string sang so\n",
     "pais_dict = {'LV': 102,'CA': 2,'GB': 9,'EC': 19,'BY': 64,'ML': 104,'MT': 118,\n",
     " 'LU': 59,'GR': 39,'NI': 33,'BZ': 113,'QA': 58,'DE': 10,'AU': 63,'IN': 31,\n",
     " 'GN': 98,'KE': 65,'HN': 22,'JM': 116,'SV': 53,'TH': 79,'IE': 5,'TN': 85,\n",
