update model file and add markdown for code

--- a/team-minekraft-dataflow2025.ipynb
+++ b/team-minekraft-dataflow2025.ipynb
@@ -5,11 +5,11 @@
    "execution_count": null,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-24T10:53:00.702125Z",
-     "iopub.status.busy": "2025-02-24T10:53:00.701859Z",
-     "iopub.status.idle": "2025-02-24T10:53:05.147230Z",
-     "shell.execute_reply": "2025-02-24T10:53:05.146644Z",
-     "shell.execute_reply.started": "2025-02-24T10:53:00.702096Z"
+     "iopub.execute_input": "2025-02-24T12:41:46.163203Z",
+     "iopub.status.busy": "2025-02-24T12:41:46.162916Z",
+     "iopub.status.idle": "2025-02-24T12:41:51.314467Z",
+     "shell.execute_reply": "2025-02-24T12:41:51.313794Z",
+     "shell.execute_reply.started": "2025-02-24T12:41:46.163169Z"
     },
     "trusted": true
    },
@@ -21,7 +21,7 @@
     "import xgboost as xgb\n",
     "import torch\n",
     "import gc\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
@@ -36,7 +36,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-24T12:41:46.163203Z",
+     "iopub.status.busy": "2025-02-24T12:41:46.162916Z",
+     "iopub.status.idle": "2025-02-24T12:41:51.314467Z",
+     "shell.execute_reply": "2025-02-24T12:41:51.313794Z",
+     "shell.execute_reply.started": "2025-02-24T12:41:46.163169Z"
+    },
+    "trusted": true
+   },
    "outputs": [],
    "source": [
     "def clear_gpu_memory():\n",
@@ -80,11 +89,11 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-24T10:53:05.148330Z",
-     "iopub.status.busy": "2025-02-24T10:53:05.148018Z",
-     "iopub.status.idle": "2025-02-24T10:53:14.362656Z",
-     "shell.execute_reply": "2025-02-24T10:53:14.361750Z",
-     "shell.execute_reply.started": "2025-02-24T10:53:05.148309Z"
+     "iopub.execute_input": "2025-02-24T12:41:51.315660Z",
+     "iopub.status.busy": "2025-02-24T12:41:51.315310Z",
+     "iopub.status.idle": "2025-02-24T12:42:01.111542Z",
+     "shell.execute_reply": "2025-02-24T12:42:01.110634Z",
+     "shell.execute_reply.started": "2025-02-24T12:41:51.315639Z"
     },
     "trusted": true
    },
@@ -145,11 +154,11 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-24T10:53:14.363873Z",
-     "iopub.status.busy": "2025-02-24T10:53:14.363628Z",
-     "iopub.status.idle": "2025-02-24T10:53:32.763945Z",
-     "shell.execute_reply": "2025-02-24T10:53:32.763263Z",
-     "shell.execute_reply.started": "2025-02-24T10:53:14.363853Z"
+     "iopub.execute_input": "2025-02-24T12:42:01.112894Z",
+     "iopub.status.busy": "2025-02-24T12:42:01.112518Z",
+     "iopub.status.idle": "2025-02-24T12:42:19.507313Z",
+     "shell.execute_reply": "2025-02-24T12:42:19.506412Z",
+     "shell.execute_reply.started": "2025-02-24T12:42:01.112863Z"
     },
     "trusted": true
    },
@@ -193,11 +202,11 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-24T10:53:32.766332Z",
-     "iopub.status.busy": "2025-02-24T10:53:32.766107Z",
-     "iopub.status.idle": "2025-02-24T10:59:26.265107Z",
-     "shell.execute_reply": "2025-02-24T10:59:26.264334Z",
-     "shell.execute_reply.started": "2025-02-24T10:53:32.766313Z"
+     "iopub.execute_input": "2025-02-24T12:42:19.509937Z",
+     "iopub.status.busy": "2025-02-24T12:42:19.509710Z",
+     "iopub.status.idle": "2025-02-24T12:48:14.226173Z",
+     "shell.execute_reply": "2025-02-24T12:48:14.225062Z",
+     "shell.execute_reply.started": "2025-02-24T12:42:19.509919Z"
     },
     "trusted": true
    },
@@ -275,11 +284,11 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-24T10:59:26.266734Z",
-     "iopub.status.busy": "2025-02-24T10:59:26.266447Z",
-     "iopub.status.idle": "2025-02-24T10:59:34.320011Z",
-     "shell.execute_reply": "2025-02-24T10:59:34.319292Z",
-     "shell.execute_reply.started": "2025-02-24T10:59:26.266704Z"
+     "iopub.execute_input": "2025-02-24T12:48:14.228074Z",
+     "iopub.status.busy": "2025-02-24T12:48:14.227765Z",
+     "iopub.status.idle": "2025-02-24T12:48:22.264182Z",
+     "shell.execute_reply": "2025-02-24T12:48:22.263328Z",
+     "shell.execute_reply.started": "2025-02-24T12:48:14.228051Z"
     },
     "trusted": true
    },
@@ -355,11 +364,11 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-24T10:59:34.320895Z",
-     "iopub.status.busy": "2025-02-24T10:59:34.320697Z",
-     "iopub.status.idle": "2025-02-24T10:59:38.748959Z",
-     "shell.execute_reply": "2025-02-24T10:59:38.748250Z",
-     "shell.execute_reply.started": "2025-02-24T10:59:34.320877Z"
+     "iopub.execute_input": "2025-02-24T12:48:22.265190Z",
+     "iopub.status.busy": "2025-02-24T12:48:22.264963Z",
+     "iopub.status.idle": "2025-02-24T12:48:26.568586Z",
+     "shell.execute_reply": "2025-02-24T12:48:26.567833Z",
+     "shell.execute_reply.started": "2025-02-24T12:48:22.265172Z"
     },
     "trusted": true
    },
@@ -393,7 +402,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tạo XGBoost DMatrix và Thiết Lập Tham Số\n",
+    "## Tạo XGBoost DMatrix và Thiết Lập Tham Số\n",
     "\n",
     "Đoạn mã này chuẩn bị dữ liệu và cấu hình mô hình XGBoost.\n",
     "\n",
@@ -415,11 +424,11 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-24T10:59:38.750249Z",
-     "iopub.status.busy": "2025-02-24T10:59:38.749932Z",
-     "iopub.status.idle": "2025-02-24T10:59:41.147172Z",
-     "shell.execute_reply": "2025-02-24T10:59:41.146461Z",
-     "shell.execute_reply.started": "2025-02-24T10:59:38.750215Z"
+     "iopub.execute_input": "2025-02-24T12:48:26.569640Z",
+     "iopub.status.busy": "2025-02-24T12:48:26.569357Z",
+     "iopub.status.idle": "2025-02-24T12:48:28.960832Z",
+     "shell.execute_reply": "2025-02-24T12:48:28.959888Z",
+     "shell.execute_reply.started": "2025-02-24T12:48:26.569617Z"
     },
     "trusted": true
    },
@@ -478,11 +487,11 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-24T10:59:41.148291Z",
-     "iopub.status.busy": "2025-02-24T10:59:41.148002Z",
-     "iopub.status.idle": "2025-02-24T11:00:41.287533Z",
-     "shell.execute_reply": "2025-02-24T11:00:41.286791Z",
-     "shell.execute_reply.started": "2025-02-24T10:59:41.148263Z"
+     "iopub.execute_input": "2025-02-24T12:48:28.962009Z",
+     "iopub.status.busy": "2025-02-24T12:48:28.961728Z",
+     "iopub.status.idle": "2025-02-24T12:49:29.068115Z",
+     "shell.execute_reply": "2025-02-24T12:49:29.067030Z",
+     "shell.execute_reply.started": "2025-02-24T12:48:28.961979Z"
     },
     "trusted": true
    },
@@ -498,7 +507,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.10/dist-packages/xgboost/core.py:160: UserWarning: [10:59:41] WARNING: /workspace/src/learner.cc:742: \n",
+      "/usr/local/lib/python3.10/dist-packages/xgboost/core.py:160: UserWarning: [12:48:29] WARNING: /workspace/src/learner.cc:742: \n",
       "Parameters: { \"silent\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -719,7 +728,6 @@
       "[208]\ttrain-mlogloss:1.04203\teval-mlogloss:0.98950\n",
       "[209]\ttrain-mlogloss:1.04192\teval-mlogloss:0.98951\n",
       "[210]\ttrain-mlogloss:1.04181\teval-mlogloss:0.98950\n",
-      "[211]\ttrain-mlogloss:1.04167\teval-mlogloss:0.98951\n",
       "\n",
       "Feature Importance:\n",
       "lag_1_ind_recibo_ult1: 6840.0\n",
@@ -907,11 +915,11 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-24T11:00:41.288437Z",
-     "iopub.status.busy": "2025-02-24T11:00:41.288170Z",
-     "iopub.status.idle": "2025-02-24T11:00:52.459182Z",
-     "shell.execute_reply": "2025-02-24T11:00:52.458402Z",
-     "shell.execute_reply.started": "2025-02-24T11:00:41.288413Z"
+     "iopub.execute_input": "2025-02-24T12:49:29.069346Z",
+     "iopub.status.busy": "2025-02-24T12:49:29.069040Z",
+     "iopub.status.idle": "2025-02-24T12:49:40.234335Z",
+     "shell.execute_reply": "2025-02-24T12:49:40.233561Z",
+     "shell.execute_reply.started": "2025-02-24T12:49:29.069322Z"
     },
     "trusted": true
    },
@@ -956,14 +964,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-24T11:07:31.196597Z",
-     "iopub.status.busy": "2025-02-24T11:07:31.196299Z",
-     "iopub.status.idle": "2025-02-24T11:07:31.201242Z",
-     "shell.execute_reply": "2025-02-24T11:07:31.200477Z",
-     "shell.execute_reply.started": "2025-02-24T11:07:31.196574Z"
+     "iopub.execute_input": "2025-02-24T12:49:40.235489Z",
+     "iopub.status.busy": "2025-02-24T12:49:40.235208Z",
+     "iopub.status.idle": "2025-02-24T12:49:40.240371Z",
+     "shell.execute_reply": "2025-02-24T12:49:40.239683Z",
+     "shell.execute_reply.started": "2025-02-24T12:49:40.235467Z"
     },
     "trusted": true
    },
@@ -988,18 +996,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Định Nghĩa Hàm MAP@3 và Tạo Submission\n",
+    "## Định Nghĩa Hàm MAP@3\n",
     "\n",
-    "Đoạn mã này định nghĩa hàm tính MAP@3 (Mean Average Precision at 3) và tạo tệp submission.\n",
+    "Đoạn mã này định nghĩa hàm tính MAP@3 (Mean Average Precision at 3).\n",
     "\n",
     "**Các Bước:**\n",
     "\n",
     "1.  **Định nghĩa hàm tính MAP@3:**\n",
     "    *   Định nghĩa hàm `apk(actual, predicted, k=3, default=0.0)` để tính Average Precision at k (AP@k) cho một khách hàng.\n",
     "    *   Định nghĩa hàm `mapk(actual, predicted, k=3, default=0.0)` để tính Mean Average Precision at k (MAP@k) trên toàn bộ tập dữ liệu. Trong đoạn code này, k được đặt là 3 cho MAP@3.\n",
-    "2.  **Tạo tệp submission:**\n",
-    "    *   Sử dụng hàm `make_submission_file` (đã định nghĩa trước đó) để tạo tệp submission trong bộ nhớ (sử dụng `io.BytesIO`).\n",
-    "3.  **Tính MAP@3 (chỉ để minh họa):**\n",
+    "2.  **Tính MAP@3 (chỉ để minh họa):**\n",
     "    *   Đọc tệp submission từ bộ nhớ.\n",
     "    *   Trích xuất danh sách các sản phẩm được dự đoán cho mỗi khách hàng từ tệp submission.\n",
     "    *   **Lưu ý quan trọng:** Trong đoạn code này, giá trị \"thực tế\" (actual) được đặt bằng giá trị dự đoán (predicted) để minh họa cách tính MAP@3. **Trong thực tế, bạn cần thay thế giá trị này bằng giá trị thực tế từ tập kiểm định (validation set) để có kết quả đánh giá chính xác.**\n",
@@ -1008,20 +1014,19 @@
     "\n",
     "**Chú Thích Thuật Ngữ:**\n",
     "\n",
-    "*   **MAP@3 (Mean Average Precision at 3):** Một metric đánh giá hiệu năng được sử dụng trong các bài toán gợi ý (recommendation), đo lường độ chính xác của 3 sản phẩm hàng đầu được dự đoán.\n",
-    "*   **Submission:** Tệp chứa các dự đoán của mô hình ở định dạng yêu cầu của cuộc thi hoặc hệ thống đánh giá.\n"
+    "*   **MAP@3 (Mean Average Precision at 3):** Một metric đánh giá hiệu năng được sử dụng trong các bài toán gợi ý (recommendation), đo lường độ chính xác của 3 sản phẩm hàng đầu được dự đoán.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-02-24T11:05:36.235783Z",
-     "iopub.status.busy": "2025-02-24T11:05:36.235480Z",
-     "iopub.status.idle": "2025-02-24T11:05:36.241480Z",
-     "shell.execute_reply": "2025-02-24T11:05:36.240424Z",
-     "shell.execute_reply.started": "2025-02-24T11:05:36.235760Z"
+     "iopub.execute_input": "2025-02-24T12:49:40.241388Z",
+     "iopub.status.busy": "2025-02-24T12:49:40.241113Z",
+     "iopub.status.idle": "2025-02-24T12:49:40.258847Z",
+     "shell.execute_reply": "2025-02-24T12:49:40.258089Z",
+     "shell.execute_reply.started": "2025-02-24T12:49:40.241358Z"
     },
     "trusted": true
    },
@@ -1070,6 +1075,67 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Tính MAP@3 Trên Tập Kiểm Tra\n",
+    "\n",
+    "Đoạn mã này tính toán MAP@3 (Mean Average Precision at 3) trên tập kiểm tra.\n",
+    "\n",
+    "**Các Bước:**\n",
+    "\n",
+    "1.  **Chuẩn bị danh sách sản phẩm thực tế và dự đoán:**\n",
+    "    *   Tạo hai danh sách rỗng `actual_products_list` và `predicted_products_list`.\n",
+    "    *   Lặp qua từng khách hàng trong tập kiểm tra (sử dụng `ncodpers` để lặp).\n",
+    "        *   **Tìm sản phẩm thực tế đã thêm:** Xác định các sản phẩm mà khách hàng đã thực sự thêm (có giá trị là 1 trong `test_table`). Thêm danh sách các sản phẩm thực tế này vào `actual_products_list`.\n",
+    "        *   **Tìm 3 sản phẩm được dự đoán hàng đầu:** Lấy ra 3 chỉ số sản phẩm hàng đầu từ mảng dự đoán `preds[i]`. Sau đó, chuyển đổi các chỉ số này thành tên sản phẩm và thêm vào `predicted_products_list`.\n",
+    "\n",
+    "2.  **Tính MAP@3:**\n",
+    "    *   Sử dụng hàm `mapk` (đã được định nghĩa trước đó) để tính MAP@3, truyền vào danh sách các sản phẩm thực tế và dự đoán.\n",
+    "    *   In ra giá trị MAP@3.\n",
+    "\n",
+    "**Chú Thích Thuật Ngữ:**\n",
+    "\n",
+    "*   **MAP@3 (Mean Average Precision at 3):** Một metric đánh giá hiệu năng đo lường độ chính xác của 3 sản phẩm hàng đầu được dự đoán cho mỗi khách hàng.\n",
+    "*   **Test Set:** Tập dữ liệu được sử dụng để đánh giá hiệu năng cuối cùng của mô hình.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2025-02-24T12:49:40.259907Z",
+     "iopub.status.busy": "2025-02-24T12:49:40.259667Z"
+    },
+    "trusted": true
+   },
+   "outputs": [],
+   "source": [
+    "# -------------------------------------------------------------\n",
+    "# 12. Calculate MAP@3 on the test set\n",
+    "\n",
+    "# Prepare actual and predicted products for the test set\n",
+    "actual_products_list = []\n",
+    "predicted_products_list = []\n",
+    "\n",
+    "# For each customer in the test set\n",
+    "for i in range(len(ncodpers)):\n",
+    "    # Get the actual products added by the customer\n",
+    "    actual_products = [product for product in products if test_table.column(product).to_numpy()[i] == 1]\n",
+    "    actual_products_list.append(actual_products)\n",
+    "\n",
+    "    # Get the top 3 predicted products for the customer\n",
+    "    predicted_indices = np.argsort(preds[i])[::-1][:3]  # Top 3 predictions\n",
+    "    predicted_products = [products[idx] for idx in predicted_indices]\n",
+    "    predicted_products_list.append(predicted_products)\n",
+    "\n",
+    "# Calculate MAP@3\n",
+    "map3_score = mapk(actual_products_list, predicted_products_list, k=3)\n",
+    "print(f\"MAP@3 on test set: {map3_score:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Ghi Tệp Submission Ra Định Dạng TXT và CSV\n",
     "\n",
     "Đoạn mã này ghi nội dung của tệp submission (đã được tạo trong bộ nhớ) ra hai tệp vật lý: một tệp văn bản (`submission.txt`) và một tệp CSV (`submission.csv`).\n",
@@ -1094,26 +1160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-02-24T11:08:45.433914Z",
-     "iopub.status.busy": "2025-02-24T11:08:45.433602Z",
-     "iopub.status.idle": "2025-02-24T11:08:50.679549Z",
-     "shell.execute_reply": "2025-02-24T11:08:50.678627Z",
-     "shell.execute_reply.started": "2025-02-24T11:08:45.433888Z"
-    },
     "trusted": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Submission written to: submission_MAP3_2nd.txt\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Assuming you already have the following variables:\n",
     "# - preds: The predictions from the model (a 2D numpy array of shape [n_samples, n_products])\n",
